hbl-compiler/src/main/java/se/atg/tabs/hblcompiler/Hbl.java
/* Hbl.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. Hbl.java */
  package se.atg.tabs.hblcompiler;

  public class Hbl/*@bgen(jjtree)*/implements HblTreeConstants, HblConstants {/*@bgen(jjtree)*/
  protected static JJTHblState jjtree = new JJTHblState();private static Integer error_count = 0;
    private static String input_filename = null;
    private static String output_filename = null;
    private static java.io.InputStream inputStream = System.in;
    private static java.io.PrintStream outputStream = System.out;
    public static void main( String[] args ) {
      parse_options(args);
      if (error_count == 0) {
        Hbl parser = new Hbl( inputStream );
        try {
          SimpleNode node = parser.Start();
          if (error_count == 0) {
            outputStream.println(node.generate().toString());
            System.exit(0);
          } else {
            System.exit(1);
          }
        } catch (Exception e) {
          System.err.println(e.getMessage());
          e.printStackTrace();
          System.exit(2);
        }
      } else {
        System.exit(3);
      }
    }

    public static void parse_options(String[] args) {
      int ind = 0;
      while (ind < args.length) {
        if (args[ind].equals("-i")) {
          ind += 1;
          if (ind < args.length) {
            input_filename = args[ind];
            ind += 1;
            java.io.File f = new java.io.File(input_filename);
            if(!f.exists() || f.isDirectory()) {
              error("Error: " + input_filename + " is not a valid input file name.");
            }
          } else {
            error("Error: The -i option must be followed by a valid file name.");
          }
        } else if (args[ind].equals("-o")) {
          ind += 1;
          if (ind < args.length) {
            output_filename = args[ind];
            ind += 1;
            java.io.File f = new java.io.File(output_filename);
            if(!f.exists() || f.isDirectory()) {
              error("Error: " + output_filename + " is not a valid output file name.");
            }
          } else {
            error("Error: The -o option must be followed by a valid file name.");
          }
        } else if (args[ind].equals("-h")) {
          error("Usage: java -jar hbl-compiler.jar -i <input_file> -o <output_file>");
          ind += 1;
        } else {
          error("Error: Unknown option " + args[ind]);
          ind += 1;
        }
      }
    }

    public static void error(String message) {
      System.err.println(message);
      error_count++;
    }

  static final public SimpleNode Start() throws ParseException {/*@bgen(jjtree) Start */
  ASTStart jjtn000 = new ASTStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ACCOUNTS:
        case HORSES:
        case TRACKS:
        case INCLUDE:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        try {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ACCOUNTS:{
            Accounts();
            break;
            }
          case HORSES:{
            Horses();
            break;
            }
          case TRACKS:{
            Tracks();
            break;
            }
          case INCLUDE:{
            Include();
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        } catch (ParseException e) {
HandleParseException(PERIOD, e);
        }
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PROGRAM:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        try {
          Program();
        } catch (ParseException e) {
HandleParseException(PERIOD, e);
        }
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case MEETING:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        try {
          Meeting();
        } catch (ParseException e) {
HandleParseException(PERIOD, e);
        }
      }
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static void HandleParseException(int skipTo, ParseException e) throws ParseException {/*@bgen(jjtree) HandleParseException */
ASTHandleParseException jjtn000 = new ASTHandleParseException(JJTHANDLEPARSEEXCEPTION);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);
try {error_count += 1;
  error(e.getMessage());
  if (skipTo != -1) {
    Token t;
    do {
      t = getNextToken();
    } while (t.kind != skipTo);
  }/*@bgen(jjtree)*/
} finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
}
  }

  static final public ASTName Name() throws ParseException {/*@bgen(jjtree) Name */
  ASTName jjtn000 = new ASTName(JJTNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token name;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFIER:{
        name = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                      jjtc000 = false;
jjtn000.setName(name.image);{if ("" != null) return jjtn000;}
        break;
        }
      case STRING_LITERAL:{
        name = jj_consume_token(STRING_LITERAL);
jjtree.closeNodeScope(jjtn000, true);
                                                                                           jjtc000 = false;
jjtn000.setName(name.image.substring(1, name.image.length()-1));{if ("" != null) return jjtn000;}
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Include() throws ParseException {/*@bgen(jjtree) Include */
  ASTInclude jjtn000 = new ASTInclude(JJTINCLUDE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token path;
    try {
      jj_consume_token(INCLUDE);
      path = jj_consume_token(STRING_LITERAL);
jjtree.closeNodeScope(jjtn000, true);
                                   jjtc000 = false;
jjtn000.setPath(path.image.substring(1, path.image.length()-1));
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void AccountSpec() throws ParseException {/*@bgen(jjtree) AccountSpec */
  ASTAccountSpec jjtn000 = new ASTAccountSpec(JJTACCOUNTSPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token amount;
  ASTName name;
    try {
      name = Name();
      amount = jj_consume_token(NUMBER);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.setName(name.getName());
    jjtn000.setAmount(Integer.parseInt(amount.image));
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Accounts() throws ParseException {/*@bgen(jjtree) Accounts */
  ASTAccounts jjtn000 = new ASTAccounts(JJTACCOUNTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ACCOUNTS);
      label_4:
      while (true) {
        AccountSpec();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case STRING_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
      }
      jj_consume_token(PERIOD);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void HorseSpec() throws ParseException {/*@bgen(jjtree) HorseSpec */
  ASTHorseSpec jjtn000 = new ASTHorseSpec(JJTHORSESPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token rank;
  ASTName name;
    try {
      name = Name();
      rank = jj_consume_token(NUMBER);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.setName(name.getName());
    jjtn000.setRank(Integer.parseInt(rank.image));
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Horses() throws ParseException {/*@bgen(jjtree) Horses */
  ASTHorses jjtn000 = new ASTHorses(JJTHORSES);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(HORSES);
      label_5:
      while (true) {
        HorseSpec();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case STRING_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
      }
      jj_consume_token(PERIOD);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void TrackSpec() throws ParseException {/*@bgen(jjtree) TrackSpec */
  ASTTrackSpec jjtn000 = new ASTTrackSpec(JJTTRACKSPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);ASTName name;
    try {
      name = Name();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.setName(name.getName());
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Tracks() throws ParseException {/*@bgen(jjtree) Tracks */
  ASTTracks jjtn000 = new ASTTracks(JJTTRACKS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(TRACKS);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case STRING_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_6;
        }
        TrackSpec();
      }
      jj_consume_token(PERIOD);
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public ASTDate Date() throws ParseException {/*@bgen(jjtree) Date */
  ASTDate jjtn000 = new ASTDate(JJTDATE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token year;
  Token month;
  Token day;
    try {
      year = jj_consume_token(NUMBER);
      jj_consume_token(DASH);
      month = jj_consume_token(NUMBER);
      jj_consume_token(DASH);
      day = jj_consume_token(NUMBER);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
jjtn000.setDate(Integer.parseInt(year.image), Integer.parseInt(month.image), Integer.parseInt(day.image));
    {if ("" != null) return jjtn000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void DDSpec(ASTLegSpecs legSpecs) throws ParseException {/*@bgen(jjtree) DDSpec */
  ASTDDSpec jjtn000 = new ASTDDSpec(JJTDDSPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);ASTLegList legList;
    try {
      try {
        jj_consume_token(DD);
        legList = LegList();
legList.validate(2, legSpecs);
        jj_consume_token(PERIOD);
      } catch (ParseException e) {
HandleParseException(PERIOD, e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public ASTLegList LegList() throws ParseException {/*@bgen(jjtree) LegList */
  ASTLegList jjtn000 = new ASTLegList(JJTLEGLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token leg;
    try {
      label_7:
      while (true) {
        leg = jj_consume_token(NUMBER);
jjtn000.addLeg(Integer.parseInt(leg.image));
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NUMBER:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
      }
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void V75Spec(ASTLegSpecs legSpecs) throws ParseException {/*@bgen(jjtree) V75Spec */
  ASTV75Spec jjtn000 = new ASTV75Spec(JJTV75SPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);ASTLegList legList;
    try {
      try {
        jj_consume_token(V75);
        legList = LegList();
legList.validate(7, legSpecs);
        jj_consume_token(PERIOD);
      } catch (ParseException e) {
HandleParseException(PERIOD, e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void PoolSpecs(ASTLegSpecs legSpecs) throws ParseException {/*@bgen(jjtree) PoolSpecs */
  ASTPoolSpecs jjtn000 = new ASTPoolSpecs(JJTPOOLSPECS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DD:
        case V75:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_8;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DD:{
          DDSpec(legSpecs);
          break;
          }
        case V75:{
          V75Spec(legSpecs);
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void StartList() throws ParseException {/*@bgen(jjtree) StartList */
  ASTStartList jjtn000 = new ASTStartList(JJTSTARTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);ASTName name;
    try {
      label_9:
      while (true) {
        name = Name();
jjtn000.addHorse(name.getName());
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:
        case STRING_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_9;
        }
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void LegSpec() throws ParseException {/*@bgen(jjtree) LegSpec */
  ASTLegSpec jjtn000 = new ASTLegSpec(JJTLEGSPEC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token leg;
    try {
      try {
        jj_consume_token(LEG);
        leg = jj_consume_token(NUMBER);
        StartList();
        jj_consume_token(PERIOD);
jjtn000.setLeg(Integer.parseInt(leg.image));
      } catch (ParseException e) {
HandleParseException(PERIOD, e);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
